--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html>
 	<head>
 		<title>Edgar Allan Poe</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<!--
 		<h1>Didelis tekstas</h1>
 		<h2>Mazesnis tekstas</h2>
 		<h3>Dar mazesnis tekstas</h3>
-		<h4>Vis dar mazesnis tekstas</h4>
-		<h5>Mazas tekstas</h5>
-		<h6>Labai mazas tekstas</h6>
+		<h4></h4>
+		<h5></h5>
+		<h6></h6>
 		<hr>
 		<br>
+		<em>
 		<strong>
 		<blockquote>
+	    <ul>
+	    <li>
 		-->
-		<em><h1>Edgar Allan Poe</h1></em>
+		<!--style="color: #b70d0d; font-size: 50px; font-family: calibri"-->
+		<em><h1 >Edgar Allan Poe</h1></em>
 
 		<a href="https://en.wikipedia.org/wiki/Edgar_Allan_Poe" target="_blank"><img src="http://img14.deviantart.net/7a67/i/2011/258/1/d/edgar_allan_poe_by_nevermore_ink-d49xd3t.jpg"></a>
 
@@ -30,6 +35,26 @@
 
 		<h2>The Bells</h2>
 		<p>I Hear the sledges with the bells-<br><strong>Silver bells!</strong><br>What a world of merriment their melody foretells!<br><strong>How they tinkle, tinkle, tinkle,</strong><br>In the icy air of night!<br>While the stars that oversprinkle<br>All the heavens, seem to twinkle<br>With a crystalline delight;<br>Keeping time, time, time,<br>In a sort of Runic rhyme,<br>To the tintinnabulation that so musically wells<br>From the bells, bells, bells, bells,<br>Bells, bells, bells-<br>From the jingling and the tinkling of the bells.</p>
+
+		<h3>List of his famous works:</h3>
+
+		<ol>
+			<li><strong>Tales</strong>
+				<ul>
+					<a href="https://en.wikipedia.org/wiki/The_Black_Cat_(short_story)" target="_blank"><li>"The Black Cat"</li></a>
+					<a href="https://en.wikipedia.org/wiki/The_Murders_in_the_Rue_Morgue" target="_blank"><li>"The Murders in the Rue Morgue"</li></a>
+					<a href="https://en.wikipedia.org/wiki/The_Tell-Tale_Heart" target="_blank"><li>"The Tell-Tale Heart"</li></a>
+				</ul>
+			</li>
+			<li><strong>Poetry</strong>
+				<ul>
+					<a href="https://en.wikipedia.org/wiki/A_Dream_Within_a_Dream" target="_blank"><li>"A Dream Within a Dream"</li></a>
+					<a href="https://en.wikipedia.org/wiki/The_City_in_the_Sea" target="_blank"><li>"The City in the Sea"</li></a>
+					<a href="https://en.wikipedia.org/wiki/The_Raven" target="_blank"><li>"The Raven"</li></a>
+					
+				</ul>
+			</li>
+		</ol>
 
 	</body>
 </html>
