--- a/index.html
+++ b/index.html
@@ -3,40 +3,21 @@
 	<head>
 		<title>Edgar Allan Poe</title>
 		<link rel="stylesheet" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Dancing+Script&amp;subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	</head>
 	<body>
-		<!--
-		<h1>Didelis tekstas</h1>
-		<h2>Mazesnis tekstas</h2>
-		<h3>Dar mazesnis tekstas</h3>
-		<h4></h4>
-		<h5></h5>
-		<h6></h6>
-		<hr>
-		<br>
-		<em>
-		<strong>
-		<blockquote>
-	    <ul>
-	    <li>
-		-->
-		<!--style="color: #b70d0d; font-size: 50px; font-family: calibri"-->
-		<em><h1 >Edgar Allan Poe</h1></em>
+		
+		<h1 >Edgar Allan Poe</h1>
+		<em><h4>(Born January 19, 1809, Died October 7, 1849)</h4></em>
 
-		<a href="https://en.wikipedia.org/wiki/Edgar_Allan_Poe" target="_blank"><img src="http://img14.deviantart.net/7a67/i/2011/258/1/d/edgar_allan_poe_by_nevermore_ink-d49xd3t.jpg"></a>
+		<img src="http://img14.deviantart.net/7a67/i/2011/258/1/d/edgar_allan_poe_by_nevermore_ink-d49xd3t.jpg">
 
 		<a href="https://en.wikipedia.org/wiki/Edgar_Allan_Poe" target="_blank"><h3>Biography of Edgar Allan Poe</h3></a>
 
-		<em><h4>(Born January 19, 1809, Died October 7, 1849)</h4></em>
+		<p>These trifles are collected and republished chiefly with a view to their redemption from the many improvements to which they have been subjected while going at random "the rounds of the press."</p><blockquote> "I am naturally anxious that what I have written should circulate as I wrote it, if it circulate at all."</blockquote> <p>In defence of my own taste, nevertheless, it is incumbent upon me to say that I think nothing in this volume of much value to the public, or very creditable to myself. Events not to be controlled have prevented me from making, at any time, any serious effort in what, under happier curcumstances, would have been not a purpose, but a passion; and the passions should be held in reverence; they must not - they cannot at will be excited, with an eye to the paltry compensations, or the more paltry commendations of mankind.</p>
 
-		<p>"These trifles are collected and republished chiefly with a view to their redemption from the many improvements to which they have been subjected while going at random "the rounds of the press."<blockquote> I am naturally anxious that what I have written should circulate as I wrote it, if it circulate at all.</blockquote> <!-- best quote ever--> In defence of my own taste, nevertheless, it is incumbent upon me to say that I think nothing in this volume of much value to the public, or very creditable to myself. Events not to be controlled have prevented me from making, at any time, any serious effort in what, under happier curcumstances, would have been not a purpose, but a passion; and the passions should be held in reverence; they must not - they cannot at will be excited, with an eye to the paltry compensations, or the more paltry commendations of mankind."</p>
-
-		<h3>Christmas themed poetry:</h3>
-
-		<h2>The Bells</h2>
-		<p>I Hear the sledges with the bells-<br><strong>Silver bells!</strong><br>What a world of merriment their melody foretells!<br><strong>How they tinkle, tinkle, tinkle,</strong><br>In the icy air of night!<br>While the stars that oversprinkle<br>All the heavens, seem to twinkle<br>With a crystalline delight;<br>Keeping time, time, time,<br>In a sort of Runic rhyme,<br>To the tintinnabulation that so musically wells<br>From the bells, bells, bells, bells,<br>Bells, bells, bells-<br>From the jingling and the tinkling of the bells.</p>
-
-		<h3>List of his famous works:</h3>
+		<h3>List of Edgar Allan Poe famous works:</h3>
 
 		<ol>
 			<li><strong>Tales</strong>
@@ -55,6 +36,13 @@
 				</ul>
 			</li>
 		</ol>
+
+		<h3>Some of his Christmas themed poetry:</h3>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/m75-812-sj4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+		<h2>The Bells</h2>
+		<p class="bells">I Hear the sledges with the <span >bells-<br>Silver bells!<br>What a world of merriment their melody foretells!<br>How they tinkle, tinkle, tinkle,<br>In the icy air of night!<br>While the stars that oversprinkle<br>All the heavens, seem to twinkle<br>With a crystalline delight;<br>Keeping time, time, time,<br>In a sort of Runic rhyme,<br>To the tintinnabulation that so musically wells<br>From the bells, bells, bells, bells,<br>Bells, bells, bells-<br>From the jingling and the tinkling of the bells.</p>
 
 	</body>
 </html>
