--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	</head>
 	<body>
-		
+
 		<h1 >Edgar Allan Poe</h1>
 		<em><h4>(Born January 19, 1809, Died October 7, 1849)</h4></em>
 
@@ -17,9 +17,9 @@
 
 		<p>These trifles are collected and republished chiefly with a view to their redemption from the many improvements to which they have been subjected while going at random "the rounds of the press."</p><blockquote> "I am naturally anxious that what I have written should circulate as I wrote it, if it circulate at all."</blockquote> <p>In defence of my own taste, nevertheless, it is incumbent upon me to say that I think nothing in this volume of much value to the public, or very creditable to myself. Events not to be controlled have prevented me from making, at any time, any serious effort in what, under happier curcumstances, would have been not a purpose, but a passion; and the passions should be held in reverence; they must not - they cannot at will be excited, with an eye to the paltry compensations, or the more paltry commendations of mankind.</p>
 
-		<h3>List of Edgar Allan Poe famous works:</h3>
+		<h3>Edgar Allan Poe's most famous works:</h3>
 
-		<ol>
+		<ul>
 			<li><strong>Tales</strong>
 				<ul>
 					<a href="https://en.wikipedia.org/wiki/The_Black_Cat_(short_story)" target="_blank"><li>"The Black Cat"</li></a>
@@ -32,42 +32,10 @@
 					<a href="https://en.wikipedia.org/wiki/A_Dream_Within_a_Dream" target="_blank"><li>"A Dream Within a Dream"</li></a>
 					<a href="https://en.wikipedia.org/wiki/The_City_in_the_Sea" target="_blank"><li>"The City in the Sea"</li></a>
 					<a href="https://en.wikipedia.org/wiki/The_Raven" target="_blank"><li>"The Raven"</li></a>
-					
 				</ul>
 			</li>
-		</ol>
+     </ul>
 
-		<h3>Some of his Christmas themed poetry:</h3>
-
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/m75-812-sj4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-
-		<h2>The Bells</h2>
-		<p class="bells">I Hear the sledges with the <span >bells-<br>Silver bells!<br>What a world of merriment their melody foretells!<br>How they tinkle, tinkle, tinkle,<br>In the icy air of night!<br>While the stars that oversprinkle<br>All the heavens, seem to twinkle<br>With a crystalline delight;<br>Keeping time, time, time,<br>In a sort of Runic rhyme,<br>To the tintinnabulation that so musically wells<br>From the bells, bells, bells, bells,<br>Bells, bells, bells-<br>From the jingling and the tinkling of the bells.</p>
-
-        <table>
-
-        	<tr>
-        		<th>VARDAS</th>
-        		<th>PAVARDE</th>
-        		<th>AMZIUS</th>
-        	</tr>
-        	<tr>
-        		<td>Jonas</td>
-        		<td>Rimkus</td>
-        		<td>54</td>
-        	</tr>
-        	<tr>
-        		<td>Vestina</td>
-        		<td>Petronyte</td>
-        		<td>31</td>
-        	</tr>
-        	<tr>
-        		<td>Marius</td>
-        		<td>Dulinskas</td>
-        		<td>23</td>
-        	</tr>
-
-        </table>
-
+		 <iframe width="560" height="315" src="https://www.youtube.com/embed/BefliMlEzZ8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 	</body>
 </html>
