--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	</head>
 	<body>
-		
+
 		<h1 >Edgar Allan Poe</h1>
 		<em><h4>(Born January 19, 1809, Died October 7, 1849)</h4></em>
 
@@ -32,42 +32,27 @@
 					<a href="https://en.wikipedia.org/wiki/A_Dream_Within_a_Dream" target="_blank"><li>"A Dream Within a Dream"</li></a>
 					<a href="https://en.wikipedia.org/wiki/The_City_in_the_Sea" target="_blank"><li>"The City in the Sea"</li></a>
 					<a href="https://en.wikipedia.org/wiki/The_Raven" target="_blank"><li>"The Raven"</li></a>
-					
+
 				</ul>
 			</li>
 		</ol>
 
-		<h3>Some of his Christmas themed poetry:</h3>
+		<h3>Excerpt from</h3>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/m75-812-sj4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+		<em><h2>The Raven</h2></em>
+		<p class="raven">Once upon a midnight dreary, while I pondered, weak and weary,<br>Over many a quaint and curious volume of forgotten lore—<br>While I nodded, nearly napping, suddenly there came a tapping,<br>As of some one gently rapping, rapping at my chamber door.<br>“’Tis some visitor,” I muttered, “tapping at my chamber door—<br>Only this and nothing more.”</p>
 
-		<h2>The Bells</h2>
-		<p class="bells">I Hear the sledges with the <span >bells-<br>Silver bells!<br>What a world of merriment their melody foretells!<br>How they tinkle, tinkle, tinkle,<br>In the icy air of night!<br>While the stars that oversprinkle<br>All the heavens, seem to twinkle<br>With a crystalline delight;<br>Keeping time, time, time,<br>In a sort of Runic rhyme,<br>To the tintinnabulation that so musically wells<br>From the bells, bells, bells, bells,<br>Bells, bells, bells-<br>From the jingling and the tinkling of the bells.</p>
+    <p class="raven">Ah, distinctly I remember it was in the bleak December;<br>And each separate dying ember wrought its ghost upon the floor.<br>
+    Eagerly I wished the morrow;—vainly I had sought to borrow<br>
+    From my books surcease of sorrow—sorrow for the lost Lenore—<br>For the rare and radiant maiden whom the angels name Lenore—<br>Nameless here for evermore.</p>
 
-        <table>
+    <p class="raven">And the silken, sad, uncertain rustling of each purple curtain<br>Thrilled me—filled me with fantastic terrors never felt before;<br>So that now, to still the beating of my heart, I stood repeating<br>“’Tis some visitor entreating entrance at my chamber door—<br>Some late visitor entreating entrance at my chamber door;—<br>This it is and nothing more.”</p>
 
-        	<tr>
-        		<th>VARDAS</th>
-        		<th>PAVARDE</th>
-        		<th>AMZIUS</th>
-        	</tr>
-        	<tr>
-        		<td>Jonas</td>
-        		<td>Rimkus</td>
-        		<td>54</td>
-        	</tr>
-        	<tr>
-        		<td>Vestina</td>
-        		<td>Petronyte</td>
-        		<td>31</td>
-        	</tr>
-        	<tr>
-        		<td>Marius</td>
-        		<td>Dulinskas</td>
-        		<td>23</td>
-        	</tr>
+    <p class="raven">Presently my soul grew stronger; hesitating then no longer,<br>“Sir,” said I, “or Madam, truly your forgiveness I implore;<br>But the fact is I was napping, and so gently you came rapping,<br>And so faintly you came tapping, tapping at my chamber door,<br>That I scarce was sure I heard you”—here I opened wide the door;—<br>Darkness there and nothing more.</p>
 
-        </table>
+    <p class="raven">Deep into that darkness peering, long I stood there wondering, fearing,<br>Doubting, dreaming dreams no mortal ever dared to dream before;<br>But the silence was unbroken, and the stillness gave no token,<br>And the only word there spoken was the whispered word, “Lenore?”<br>This I whispered, and an echo murmured back the word, “Lenore!”—<br>Merely this and nothing more.</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BefliMlEzZ8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 	</body>
 </html>
